--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,11 +1,17 @@
 <div class="container">
   <div class="collapse navbar-collapse">
-    <table>
+<table>
+<% if user_signed_in? %>
       <tr>
         <td>&nbsp;<%= link_to 'Users', users_path(@users) %>&nbsp;</td>
         <td>&nbsp;<%= link_to 'Projects', projects_path(@projects) %>&nbsp;</td>
         <td>&nbsp;<%= link_to 'Tasks', tasks_path(@tasks) %></td>
+        <td>&nbsp;<%= link_to 'Sign_out', destroy_user_session_path %></td>
+<% else %>
+	<td><%= link_to 'Sign up', new_user_registration_path %></td>
+	<td><%= link_to 'Sign in', new_user_session_path %></td>
         </tr>
+<% end %>
     </table>
   </div>
 </div>
